--- a/.github/workflows/python-pkg.yml
+++ b/.github/workflows/python-pkg.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black pytest
+        pip install black pytest-cov
     - name: Format with black
       run: |
         black --check .
