--- a/.github/workflows/python-pkg.yml
+++ b/.github/workflows/python-pkg.yml
@@ -17,9 +17,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
-    - name: Install dependencies
+    - name: Install package and dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install .
         pip install black pytest-cov
     - name: Format with black
       run: |
