--- a/.github/workflows/python-pkg.yml
+++ b/.github/workflows/python-pkg.yml
@@ -7,24 +7,36 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  build-n-publish:
+    name: Build, test, and publish Python package to TestPyPI
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: "3.10"
-    - name: Install package and dependencies
+        python-version: 3.10
+    - name: Install the package
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install black pytest-cov
     - name: Test with pytest
       run: |
+        pip install pytest-cov
         pytest --cov
-    - name: Check format with black
+    - name: Check formatting with black
       run: |
+        pip install black
         black --check .
+    - name: Build a binary wheel and a source tarball
+      if: startsWith(github.ref, 'refs/tags')
+      run: |
+        pip install --upgrade build
+        pip install --upgrade twine
+        python -m build --outdir dist/
+        twine check dist/*
+    - name: Publish the distribution to Test PyPI
+      if: startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
