--- a/.github/workflows/python-pkg-ci.yml
+++ b/.github/workflows/python-pkg-ci.yml
@@ -1,10 +1,10 @@
 name: Package CI/CD
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  push
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
 
 jobs:
   build-n-publish:
@@ -41,4 +41,5 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        repository_url: https://test.pypi.org/legacy/  # delete this one for PyPI
         verbose: true
