--- a/.github/workflows/python-pkg-ci.yml
+++ b/.github/workflows/python-pkg-ci.yml
@@ -1,10 +1,11 @@
 name: Package CI/CD
 
 on:
-  push
-#    branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
+  push:
+    branches: [ master ]
+    tags: [v**]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build-n-publish:
@@ -20,6 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+    # in any case, run pytest and check formatting with black, proceed only if ok.
     - name: Test with pytest
       run: |
         pip install pytest-cov
@@ -28,6 +30,7 @@ jobs:
       run: |
         pip install black
         black --check .
+    # if a tag is pushed starting with "v" (v1.1.1 etc.), build the distro and upload.
     - name: Build a binary wheel and a source tarball
       if: startsWith(github.ref, 'refs/tags')
       run: |
@@ -36,8 +39,8 @@ jobs:
         python -m build --outdir dist/
         twine check dist/*
     - name: Publish the distribution to Test PyPI
-      if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@release/v1
+      if: startsWith(github.ref, 'refs/tags') && github.ref == 'refs/heads/master'
+      uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
