--- a/.github/workflows/python-pkg-ci.yml
+++ b/.github/workflows/python-pkg-ci.yml
@@ -1,15 +1,14 @@
-name: Package CI/CD
+name: Install and test the package
 
 on:
   push:
     branches: [ master ]
-    tags: [v**]
   pull_request:
     branches: [ master ]
 
 jobs:
-  build-n-publish:
-    name: Build, test, and publish Python package to TestPyPI
+  build-n-test:
+    name: Install and test the package
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -17,32 +16,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
-    - name: Install the package
+    - name: Install the package locally
       run: |
         python -m pip install --upgrade pip
         pip install .
-    # in any case, run pytest and check formatting with black, proceed only if ok.
     - name: Test with pytest
       run: |
         pip install pytest-cov
         pytest --cov
-    - name: Check formatting with black
+    - name: Check code format
       run: |
         pip install black
         black --check .
-    # if a tag is pushed starting with "v" (v1.1.1 etc.), build the distro and upload.
-    - name: Build a binary wheel and a source tarball
-      if: startsWith(github.ref, 'refs/tags')
-      run: |
-        pip install --upgrade build
-        pip install --upgrade twine
-        python -m build --outdir dist/
-        twine check dist/*
-    - name: Publish the distribution to Test PyPI
-      if: startsWith(github.ref, 'refs/tags') && github.ref == 'refs/heads/master'
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        user: __token__
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/  # delete this one for PyPI
-        verbose: true
