--- a/.github/workflows/python-pkg-ci.yml
+++ b/.github/workflows/python-pkg-ci.yml
@@ -20,11 +20,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-    - name: Test with pytest
+    - name: Install dependencies for testing
       run: |
         pip install pytest-cov
+        pip install black
+    - name: Test with pytest
+      run: |
         pytest --cov
     - name: Check code format
       run: |
-        pip install black
         black --check .
